--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ const services = await getCollection("services");
 
                     <div class="subsets">
                         <div>
-                            <a href="/services/" class="heading indoor icon"
+                            <a href="/services/#indoor" class="heading indoor icon"
                                 >Indoor Cleaning</a
                             >
 
@@ -61,7 +61,7 @@ const services = await getCollection("services");
                         <hr />
 
                         <div>
-                            <a href="/services/" class="heading outdoor icon"
+                            <a href="/services/#external" class="heading outdoor icon"
                                 >External Cleaning</a
                             >
 
@@ -209,8 +209,10 @@ const services = await getCollection("services");
     }
 
     header .logo_anchor {
-        width: clamp(1rem, 30vmin, 15rem);
-        display: block;
+        width: clamp(1rem,30vmin,15rem);
+        display: flex;
+        height: 100%;
+        align-items: center;
     }
 
     header nav.show {
@@ -251,11 +253,10 @@ const services = await getCollection("services");
     }
 
     header nav {
-        box-shadow: -1rem 2rem 3rem -1rem rgb(102 102 102 / 40%);
         width: calc(100% - (100% - var(--mobile-width)) / 2);
-        background-color: rgb(255 255 255 / 80%);
-        font-size: clamp(1.6rem, 5vw, 2.2rem);
-        backdrop-filter: blur(0.8rem);
+        background-color: rgb(255 255 255 / 85%);
+        font-size: clamp(1.6rem,5vw,2.2rem);
+        backdrop-filter: blur(0.5rem);
         border-radius: 0 0 0 1.4rem;
         transform: translateY(100%);
         padding: 2rem 2rem 2rem 0;
@@ -276,7 +277,7 @@ const services = await getCollection("services");
         background-color: var(--highlight);
         font-size: clamp(1.8rem,1vw,2rem);
         font-weight: 500;
-        border-radius: 0.6rem;
+        border-radius: 0.4rem;
         height: min-content;
         color: var(--light);
         position: sticky;
@@ -314,16 +315,15 @@ const services = await getCollection("services");
     }
 
     .subsets {
-        padding: 1.5rem 0rem 2.5rem 3rem;
+        padding: 1.5rem 1.5rem 2.5rem 3rem;
         font-size: 0.9em;
         font-weight: 500;
         display: none;
         flex-direction: column;
-        gap: clamp(2rem, 2vw, 4rem);
+        gap: clamp(2rem,2vw,4rem);
         margin: 0rem 0 3rem;
-        background-image: linear-gradient(40deg, var(--light), transparent 80%);
-        background-attachment: fixed;
         border-radius: 0.9rem;
+        border: 0.1rem solid var(--light);
     }
 
     .subsets > div a {
@@ -344,9 +344,9 @@ const services = await getCollection("services");
 
     .subsets > hr {
         margin: 0;
-        background-color: var(--light-a);
+        background-color: var(--light);
         flex: 1;
-        border: 0.05rem solid var(--light-a);
+        border: 0.1rem solid var(--light-a);
     }
 
     .subsets.visible {
@@ -363,9 +363,6 @@ const services = await getCollection("services");
         font-weight: 600;
         position: relative;
         width: fit-content;
-        display: flex;
-        align-items: center;
-        gap: 0.6rem;
     }
 
     .subsets .heading.icon::after {
@@ -376,7 +373,9 @@ const services = await getCollection("services");
         background-size: contain;
         background-position: center;
         background-repeat: no-repeat;
-        display: block;
+        display: inline-block;
+        margin-left: 0.6rem;
+        opacity: 0.5;
     }
 
     .subsets .icon.indoor::after {
